<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2022. Bernard Bou
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>treebolic</artifactId>
		<groupId>io.github.treebolic</groupId>
		<version>4.0-SNAPSHOT</version>
	</parent>

	<artifactId>provider-owl-jena</artifactId>

	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.github.treebolic</groupId>
			<artifactId>treebolic-model</artifactId>
			<version>${revision}</version>
		</dependency>
		<dependency>
			<groupId>io.github.treebolic</groupId>
			<artifactId>treebolic-mutable</artifactId>
			<version>${revision}</version>
		</dependency>
		<dependency>
			<groupId>io.github.treebolic</groupId>
			<artifactId>treebolic-glue-iface</artifactId>
			<version>${revision}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.github.treebolic</groupId>
			<artifactId>treebolic-loadbalancer</artifactId>
			<version>${revision}</version>
		</dependency>
		<dependency>
			<groupId>io.github.treebolic</groupId>
			<artifactId>treebolic-annotations</artifactId>
			<version>${revision}</version>
		</dependency>
	  <dependency>
		  <groupId>org.apache.jena</groupId>
	  	<artifactId>apache-jena-libs</artifactId>
	  	<version>4.6.1</version>
	  	<type>pom</type>
	  </dependency>
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<systemProperties>
						<property>
							<name>SILENT</name>
						</property>
					</systemProperties>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<source>8</source>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<localCheckout>true</localCheckout>
					<pushChanges>false</pushChanges>
					<mavenExecutorId>forked-path</mavenExecutorId>
					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9.5</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh_treebolic</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>ossrh_treebolic</id>
			<name>Maven Central Staging Repository</name>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
		<snapshotRepository>
			<id>ossrh_treebolic</id>
			<name>Maven Central Snapshot Repository</name>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<url>https://github.com/treebolic/treebolic4</url>
		<connection>scm:git:git://github.com/treebolic/treebolic4.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:treebolic/treebolic4.git</developerConnection>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/treebolic/treebolic4/issues</url>
	</issueManagement>

	<licenses>
		<license>
			<name>GPL 3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>com.github.treebolic</name>
		<url>https://github.com/treebolic</url>
	</organization>

	<developers>
		<developer>
			<name>Bernard Bou</name>
			<id>bbou</id>
			<email>1313ou@gmail.com</email>
			<roles>
				<role>architect</role>
				<role>developer</role>
				<role>maintainer</role>
			</roles>
		</developer>
	</developers>

</project>
